--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,10 @@ build/Release
 # Dependency directory
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
+.DS_STORE
 node_modules
+lib/html.js
+public/bundle.js
+public/bundle.js.map
 public/css/compiled/*
 public/css/main.min.css
