--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
   "scripts": {
     "pretest": "jshint --reporter node_modules/jshint-stylish/stylish.js index.js lib test",
     "test": "mocha -R spec --recursive test/",
-    "start": "NODE_ENV=production node .",
-    "dev": "NODE_ENV=development node .",
+    "start": "NODE_ENV=production webpack -p --config webpack.config.server.js && node .",
+    "dev": "./node_modules/.bin/webpack-dev-server --hot --colors --content-base public",
     "stylus": "stylus public/styl --out public/css/compiled",
-    "joincss": "cat public/css/{vendor,compiled}/*.css > public/css/compiled/compiled.css",
     "csso": "csso public/css/compiled/compiled.css > public/css/main.min.css",
     "buildcss": "rm -rf public/css/compiled && mkdir -p public/css/compiled && npm run stylus && npm run joincss && npm run csso",
-    "browserify": "browserify public/js/app.js > public/js/bundle.js",
     "build": "npm run buildcss"
   },
   "repository": {
@@ -31,24 +29,21 @@
     "url": "https://github.com/nychtml5/www/issues"
   },
   "dependencies": {
-    "async": "^0.9.0",
     "body-parser": "^1.3.0",
     "compression": "^1.0.6",
     "debug": "^0.8.1",
     "envify": "~1.2.1",
     "errorhandler": "^1.0.2",
     "express": "^4.2.0",
-    "express-react-views": "^0.2.0",
     "fluxxor": "^1.1.1",
-    "forever": "^0.11.1",
     "is-predicate": "^0.7.2",
-    "jquery": "^2.1.1",
     "lodash": "^2.4.1",
     "map-require": "0.0.5",
     "memory-cache": "0.0.5",
     "method-override": "^2.0.2",
     "moment": "^2.6.0",
     "morgan": "^1.1.1",
+    "ramda": "^0.2.3",
     "react": "^0.10.0",
     "react-classset": "0.0.1",
     "serve-favicon": "^2.0.1",
@@ -57,15 +52,23 @@
     "twitter": "^0.2.9"
   },
   "devDependencies": {
-    "mocha": "^1.19.0",
+    "callback-with": "0.0.1",
+    "chai": "^1.9.1",
+    "css-loader": "^0.7.0",
+    "csso": "^1.3.11",
+    "file-loader": "^0.5.1",
     "jshint": "^2.5.1",
     "jshint-stylish": "~0.2.0",
-    "supertest": "^0.12.1",
-    "browserify": "^4.1.5",
-    "csso": "^1.3.11",
-    "sinon-chai": "^2.5.0",
+    "jsx-loader": "^0.10.2",
+    "mocha": "^1.19.0",
+    "raw-loader": "^0.5.1",
+    "react-hot-loader": "^0.1.10",
     "sinon": "^1.10.1",
-    "chai": "^1.9.1",
-    "callback-with": "0.0.1"
+    "sinon-chai": "^2.5.0",
+    "style-loader": "^0.6.4",
+    "stylus-loader": "^0.3.1",
+    "supertest": "^0.12.1",
+    "url-loader": "^0.5.5",
+    "webpack": "^1.3.1-beta8"
   }
 }
